network-policies/web-secure-access-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-secure-access-network-policy
spec:
  podSelector:
    matchLabels:
      app: web-secure
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: access-allow
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: access-allow
    ports:
    - protocol: TCP
      port: 80
